# WioTerminalChan

./: .embed.toml  Cargo.toml  README.md  build.rs  memory.x
.cargo/: config.toml
doc/: slide.md
src/: main.rs
src/asserts/: conv.py  eye_almost_closed.raw  eye_closed.raw  eye_fully_opened.raw  eye_half_opened.raw  mouth.raw
